<resources>

    //activity_catalog
    <string name="food_catalog">Food catalog</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="btn2">btn2</string>
    <string name="profile">Profile</string>
    <string name="btn3">btn3</string>
    <string name="login_1">Login</string>
    <string name="btn3oculto">btn3oculto</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="Settings_1">Settings</string>

    //activity_intro
    <string name="get_started">Get Started</string>
    <string name="imagineView">imagineView</string>
    <string name="app_name">Foody </string>
    <string name="imagineview2">Imagineview2</string>
    <string name="food_shipment_app">Food shipment app</string>

    //activity_main
    <string name="hello">Hello</string>
    <string name="User">User</string>
    <string name="order_and_eat">Order and eat</string>
    <string name="imagineView3">imagineView3</string>
    <string name="Search">Search</string>
    <string name="all">All</string>
    <string name="free_delivery">Free delivery</string>
    <string name="nov_1_dec_31">Nov 1 to Dec 31</string>
    <string name="order_now">Order now</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
    <string name="shopping_cart">Shopping cart</string>

    //fragment_forgot_pass
    <string name="imagineView9">imagineView9</string>
    <string name="password_recovery">Password recovery</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="send">Send</string>

    //fragment_log_out
    <string name="imagineview10">imagineview10</string>
    <string name="log_out">Log out</string>
    <string name="come_back_soon">Come back soon</string>
    <string name="user_1">User</string>
    <string name="exit">Exit</string>

    //fragment_login
    <string name="Login_in">Login</string>
    <string name="name">Name</string>
    <string name="password_1">Password</string>
    <string name="you_may_also_use">You may also use</string>
    <string name="log_google">log_google</string>
    <string name="log_facebook">log_facebook</string>
    <string name="log_twitter">log_twitter</string>
    <string name="are_you_already_registered">Are you already registered</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="lastname">Lastname</string>
    <string name="email_1">Email</string>
    <string name="password">Password</string>
    <string name="register_1">Register</string>

    //viewholder_catalog
    <string name="pizza">Pizza</string>
    <string name="chicken_and_mushroom_meat_pizza">Chicken and mushroom meat pizza</string>
    <string name="COP">COP</string>
    <string name="_30_000">30.000</string>

    //viewholder_populate
    <string name="Pizzas">Pizzas</string>
    <string name="png_pizza">png pizza</string>
    <string name="cost">Cost</string>
    <string name="simb_pesos">Pesos</string>
    <string name="add">Add</string>

    //viewholder_category
    <string name="categ_pic">Categories</string>
    <string name="img_pizza1">img_pizza</string>
    <string name="title">title</string>


</resources>