<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="10dp"
    android:background="@drawable/cat_fondo"
    android:elevation="3dp"
    tools:context=".activity.CatalogActivity">


    <ImageView
        android:id="@+id/itemCat"
        android:layout_width="99dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombreCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pizza"
        android:textColor="#000000"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/itemCat"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descripcionCat"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/chicken_and_mushroom_meat_pizza"
        android:textSize="10dp"
        app:layout_constraintStart_toEndOf="@+id/itemCat"
        app:layout_constraintTop_toBottomOf="@+id/nombreCat" />

    <TextView
        android:id="@+id/simPesos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/COP"
        app:layout_constraintBottom_toBottomOf="@+id/itemCat"
        app:layout_constraintStart_toEndOf="@+id/itemCat"
        app:layout_constraintTop_toBottomOf="@+id/descripcionCat" />

    <TextView
        android:id="@+id/valorCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/_30_000"
        app:layout_constraintBottom_toBottomOf="@+id/simPesos"
        app:layout_constraintStart_toEndOf="@+id/simPesos"
        app:layout_constraintTop_toTopOf="@+id/simPesos" />

    <TextView
        android:id="@+id/mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="+"
        android:gravity="center"
        android:background="@drawable/btn_category"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/valorCat"
        app:layout_constraintStart_toEndOf="@+id/valorCat"
        app:layout_constraintTop_toTopOf="@+id/valorCat" />

    <TextView
        android:id="@+id/cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:background="@drawable/btn_category"
        android:padding="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/mas"
        app:layout_constraintStart_toEndOf="@+id/mas"
        app:layout_constraintTop_toTopOf="@+id/mas" />

    <TextView
        android:id="@+id/menos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:background="@drawable/btn_category"
        android:text="-"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/cantidad"
        app:layout_constraintStart_toEndOf="@+id/cantidad"
        app:layout_constraintTop_toTopOf="@+id/cantidad" />

</androidx.constraintlayout.widget.ConstraintLayout>